--- a/index.html
+++ b/index.html
@@ -14,7 +14,7 @@
 <body>
 
   <div class="coming-soon-container">
-    <a href="#" class="logo coming-soon-logo">
+    <a class="logo coming-soon-logo">
       <span class="logo-mark">[ n. ]</span>
       <span class="logo-text">nestio.</span>
     </a>
@@ -27,4 +27,5 @@
 </body>
 
 </html>
+
 
